// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Xing 1 1`] = `
<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solidcircle={true}
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Xing"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          message="I am so cool"
          solidcircle={true}
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.6 0 12 0zM7.8 14.5h-3L7 11.3 5.3 8.5h3l1.8 2.8L8 14.5zm9 5h-3.4l-3-5.5L15 5.5h3.2L13.6 14l3 5.5z"
                  />
                </svg>
                 share on 
                Xing
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 2 1`] = `
<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    message="I am so cool"
    name="Xing"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          message="I am so cool"
          solidcircle={true}
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.6 0 12 0zM7.8 14.5h-3L7 11.3 5.3 8.5h3l1.8 2.8L8 14.5zm9 5h-3.4l-3-5.5L15 5.5h3.2L13.6 14l3 5.5z"
                  />
                </svg>
                 
                Xing
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 3 1`] = `
<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Xing"
    small={true}
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          message="I am so cool"
          small={true}
          solidcircle={true}
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.6 0 12 0zM7.8 14.5h-3L7 11.3 5.3 8.5h3l1.8 2.8L8 14.5zm9 5h-3.4l-3-5.5L15 5.5h3.2L13.6 14l3 5.5z"
                  />
                </svg>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 4 1`] = `
<Component
  big={true}
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    circle={true}
    href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Xing"
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="sc-htpNat dZQCuR"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M8.4 8.5h-3L7 11.3l-2.2 3.2h3l2.3-3.2zm10-3h-3.2l-5 8.5 3.2 5.5h3.3l-3-5.5z"
                  />
                </svg>
                 share on 
                Xing
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 5 1`] = `
<Component
  circle={true}
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    message="I am so cool"
    name="Xing"
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="sc-htpNat dZQCuR"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M8.4 8.5h-3L7 11.3l-2.2 3.2h3l2.3-3.2zm10-3h-3.2l-5 8.5 3.2 5.5h3.3l-3-5.5z"
                  />
                </svg>
                 
                Xing
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 6 1`] = `
<Component
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Xing"
    small={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          message="I am so cool"
          small={true}
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="sc-htpNat dZQCuR"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M8.4 8.5h-3L7 11.3l-2.2 3.2h3l2.3-3.2zm10-3h-3.2l-5 8.5 3.2 5.5h3.3l-3-5.5z"
                  />
                </svg>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 7 1`] = `
<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solid={true}
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Xing"
    solid={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.2 9.7l-3-5.4C7.2 4 7 4 6.8 4h-5c-.3 0-.4 0-.5.2v.5L4 10 .4 16v.5c0 .2.2.3.4.3h5c.3 0 .4 0 .5-.2l4-6.6v-.5zM24 .2l-.5-.2H18s-.2 0-.3.3l-8 14v.4l5.2 9c0 .2 0 .3.3.3h5.4s.3 0 .4-.2c.2-.2.2-.4 0-.5l-5-8.8L24 .7V.2z"
                  />
                </svg>
                 share on 
                Xing
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 8 1`] = `
<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    message="I am so cool"
    name="Xing"
    solid={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.2 9.7l-3-5.4C7.2 4 7 4 6.8 4h-5c-.3 0-.4 0-.5.2v.5L4 10 .4 16v.5c0 .2.2.3.4.3h5c.3 0 .4 0 .5-.2l4-6.6v-.5zM24 .2l-.5-.2H18s-.2 0-.3.3l-8 14v.4l5.2 9c0 .2 0 .3.3.3h5.4s.3 0 .4-.2c.2-.2.2-.4 0-.5l-5-8.8L24 .7V.2z"
                  />
                </svg>
                 
                Xing
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 9 1`] = `
<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Xing"
    small={true}
    solid={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=http%3A%2F%2Fsharingbuttons.io."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          message="I am so cool"
          small={true}
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.2 9.7l-3-5.4C7.2 4 7 4 6.8 4h-5c-.3 0-.4 0-.5.2v.5L4 10 .4 16v.5c0 .2.2.3.4.3h5c.3 0 .4 0 .5-.2l4-6.6v-.5zM24 .2l-.5-.2H18s-.2 0-.3.3l-8 14v.4l5.2 9c0 .2 0 .3.3.3h5.4s.3 0 .4-.2c.2-.2.2-.4 0-.5l-5-8.8L24 .7V.2z"
                  />
                </svg>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 11 1`] = `
<Component
  circle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://www.xing.com/app/user?op=share;url=;title=undefined."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Xing"
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=undefined."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=undefined."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div>
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="sc-htpNat dZQCuR"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M8.4 8.5h-3L7 11.3l-2.2 3.2h3l2.3-3.2zm10-3h-3.2l-5 8.5 3.2 5.5h3.3l-3-5.5z"
                  />
                </svg>
                 
                Xing
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 11 2`] = `
<Component
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=undefined."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Xing"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=undefined."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=undefined."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div
          solidcircle={true}
        >
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.6 0 12 0zM7.8 14.5h-3L7 11.3 5.3 8.5h3l1.8 2.8L8 14.5zm9 5h-3.4l-3-5.5L15 5.5h3.2L13.6 14l3 5.5z"
                  />
                </svg>
                 
                Xing
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 12 1`] = `
<Component>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=undefined."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Xing"
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=undefined."
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bSlLDy"
        href="https://www.xing.com/app/user?op=share;url=;title=undefined."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <styled.div>
          <div
            className="sc-gZMcBi FVSUz"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.2 9.7l-3-5.4C7.2 4 7 4 6.8 4h-5c-.3 0-.4 0-.5.2v.5L4 10 .4 16v.5c0 .2.2.3.4.3h5c.3 0 .4 0 .5-.2l4-6.6v-.5zM24 .2l-.5-.2H18s-.2 0-.3.3l-8 14v.4l5.2 9c0 .2 0 .3.3.3h5.4s.3 0 .4-.2c.2-.2.2-.4 0-.5l-5-8.8L24 .7V.2z"
                  />
                </svg>
                 
                Xing
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 13 1`] = `
<Component
  simple={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=undefined."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Xing"
    simple={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=undefined."
      rel="noreferrer noopener"
      simple={true}
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH bGIzAI"
        href="https://www.xing.com/app/user?op=share;url=;title=undefined."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <XingIconFill>
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.2 9.7l-3-5.4C7.2 4 7 4 6.8 4h-5c-.3 0-.4 0-.5.2v.5L4 10 .4 16v.5c0 .2.2.3.4.3h5c.3 0 .4 0 .5-.2l4-6.6v-.5zM24 .2l-.5-.2H18s-.2 0-.3.3l-8 14v.4l5.2 9c0 .2 0 .3.3.3h5.4s.3 0 .4-.2c.2-.2.2-.4 0-.5l-5-8.8L24 .7V.2z"
            />
          </svg>
        </XingIconFill>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Xing 14 1`] = `
<Component
  simpleReverse={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://www.xing.com/app/user?op=share;url=;title=undefined."
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Xing"
    simpleReverse={true}
  >
    <styled.a
      aria-label="Share on Xing"
      href="https://www.xing.com/app/user?op=share;url=;title=undefined."
      rel="noreferrer noopener"
      simpleReverse={true}
      target="_blank"
      title="Share on Xing"
    >
      <a
        aria-label="Share on Xing"
        className="sc-bwzfXH jHqTEf"
        href="https://www.xing.com/app/user?op=share;url=;title=undefined."
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Xing"
      >
        <XingIconFill>
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.2 9.7l-3-5.4C7.2 4 7 4 6.8 4h-5c-.3 0-.4 0-.5.2v.5L4 10 .4 16v.5c0 .2.2.3.4.3h5c.3 0 .4 0 .5-.2l4-6.6v-.5zM24 .2l-.5-.2H18s-.2 0-.3.3l-8 14v.4l5.2 9c0 .2 0 .3.3.3h5.4s.3 0 .4-.2c.2-.2.2-.4 0-.5l-5-8.8L24 .7V.2z"
            />
          </svg>
        </XingIconFill>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;
